--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Whitbread UI Exercise</title>
+    <title>Venue Search API Exercise</title>
     <link href="css/app.css" rel="stylesheet" />
 </head>
 
@@ -20,7 +20,7 @@
     <!-- main content -->
     <main id="main" role="main">
         <h1 class="heading1">Recommendations for your area</h1>
-        <form action="" method="" id="placeSearchFrm">
+        <form id="placeSearchFrm">
             <fieldset class="fieldset">
                 <legend class="legend">Search by location:</legend>
                 <label class="label" for="placeName">Place</label>
